stole everything from solid-state-drive for Typecraft and somehow it works now

--- a/Typecraft/src/app/app.component.html
+++ b/Typecraft/src/app/app.component.html
@@ -1,1 +1,4 @@
-<phaser-component [gameConfig]="gameConfig" (gameReady)="onGameReady($event)"></phaser-component>
+<div style="width: 768px; margin: auto">
+    <h1>Solid State Drive</h1>
+    <app-game></app-game>
+</div>
