--- a/Typecraft/src/app/app.component.html
+++ b/Typecraft/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div style="width: 960px; margin: auto">
+<div style="width: 480px; margin: auto; margin-top: 50px">
     <app-game></app-game>
 </div>
