--- a/Swordcraft/src/app/app.component.html
+++ b/Swordcraft/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div style="width: 480px; margin: auto; margin-top: 30px">
+<div style="width: 100%; height: 100%; margin: auto">
     <app-game></app-game>
 </div>
