--- a/Swordcraft/src/app/app.component.html
+++ b/Swordcraft/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div style="width: 100%; height: 100%; margin: auto">
+<div style="width: 1000px; margin: auto; margin-top: 20px;">
     <app-game></app-game>
 </div>
